modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/assignment_empty_assignee.gd
func test():
	var a = 0
	a =
